@@ -45,6 +45,7 @@
 		<script type="text/javascript" src="js/font.js"></script>
 		<script type="text/javascript" src="js/object_draw.js"></script>
 		<script type="text/javascript" src="js/dialog.js"></script>
+		<script type="text/javascript" src="js/damage_table.js"></script>
 		<script type="text/javascript" src="js/shell.js"></script>
 	</head>
 	<body>
