@@ -41,138 +41,138 @@ function DamageTable()
 	
 	this.init = function()
 	{
-		this.addArmor('ToughHuman', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			F1: [100, 30, 0],
-			G2: [ 80, 10, 3],
-			K1: [ 90,  5, 2],
-			R2: [  0,  0, 0],
-			Z0: [  0,  0, 0]
+		this.addArmor('ToughHuman', 1, 0.1, 0, {
+			A1: [0.5,  0.1,    0],
+			B1: [  1,    0,    0],
+			C1: [  0,    0,    0],
+			F1: [  1,  0.3,    0],
+			G2: [0.8,  0.1, 0.03],
+			K1: [0.9, 0.05, 0.02],
+			R2: [  0,    0,    0],
+			Z0: [  0,    0,    0]
 		});
 		
-		this.addArmor('ToughHumanWet', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			F1: [100, 30, 0],
-			G2: [ 80, 10, 3],
-			K1: [ 90,  5, 2],
-			R2: [  0,  0, 0],
-			Z0: [ 80,  0, 0]
+		this.addArmor('ToughHumanWet', 1, 0.1, 0, {
+			A1: [0.5,  0.1,    0],
+			B1: [  1,    0,    0],
+			C1: [  0,    0,    0],
+			F1: [  1,  0.3,    0],
+			G2: [0.8,  0.1, 0.03],
+			K1: [0.9, 0.05, 0.02],
+			R2: [  0,    0,    0],
+			Z0: [0.8,    0,    0]
 		});
 		
-		this.addArmor('PowerHuman', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			F1: [100, 30, 0],
-			G2: [ 80, 10, 3],
-			K1: [ 90,  5, 2],
-			R2: [  0,  0, 0],
-			Z0: [  0,  0, 0]
+		this.addArmor('PowerHuman', 1, 0.1, 0, {
+			A1: [0.5,  0.1,    0],
+			B1: [  1,    0,    0],
+			C1: [  0,    0,    0],
+			F1: [  1,  0.3,    0],
+			G2: [0.8,  0.1, 0.03],
+			K1: [0.9, 0.05, 0.02],
+			R2: [  0,    0,    0],
+			Z0: [  0,    0,    0]
 		});
 		
-		this.addArmor('PowerHumanWet', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			F1: [100, 30, 0],
-			G2: [ 80, 10, 3],
-			K1: [ 90,  5, 2],
-			R2: [  0,  0, 0],
-			Z0: [ 80,  0, 0]
+		this.addArmor('PowerHumanWet', 1, 0.1, 0, {
+			A1: [0.5,  0.1,    0],
+			B1: [  1,    0,    0],
+			C1: [  0,    0,    0],
+			F1: [  1,  0.3,    0],
+			G2: [0.8,  0.1, 0.03],
+			K1: [0.9, 0.05, 0.02],
+			R2: [  0,    0,    0],
+			Z0: [0.8,    0,    0]
 		});
 		
-		this.addArmor('FlyingArmour', 100, 10, 0, {
-			E2: [ 50, 10, 0],
-			E3: [ 50, 10, 0],
-			R2: [  0,  0, 0],
-			S2: [  0,  0, 0],
-			Z0: [  0,  0, 0]
+		this.addArmor('FlyingArmour', 1, 0.1, 0, {
+			E2: [0.5,  0.1,    0],
+			E3: [0.5,  0.1,    0],
+			R2: [  0,    0,    0],
+			S2: [  0,    0,    0],
+			Z0: [  0,    0,    0]
 		});
 		
-		this.addArmor('TankPlating', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			E1: [200, 10, 0],
-			E2: [ 50, 10, 0],
-			E3: [ 75, 10, 0],
-			E5: [150, 10, 0],
-			S1: [ 10, 10, 0],
-			F1: [100, 30, 0],
-			G1: [150, 10, 0],
-			G2: [ 80, 10, 3],
-			M3: [250, 10, 0],
-			K1: [ 90,  5, 2],
-			K2: [ 75, 10, 0],
-			R2: [  0,  0, 0],
-			S2: [  0,  0, 0],
-			Z0: [  0,  0, 0]	
+		this.addArmor('TankPlating', 1, 0.1, 0, {
+			A1: [ 0.5,  0.1,    0],
+			B1: [   1,    0,    0],
+			C1: [   0,    0,    0],
+			E1: [   2,  0.1,    0],
+			E2: [ 0.5,  0.1,    0],
+			E3: [0.75,  0.1,    0],
+			E5: [ 1.5,  0.1,    0],
+			S1: [ 0.1,  0.1,    0],
+			F1: [   1,  0.3,    0],
+			G1: [ 1.5,  0.1,    0],
+			G2: [ 0.8,  0.1, 0.03],
+			M3: [ 2.5,  0.1,    0],
+			K1: [ 0.9, 0.05, 0.02],
+			K2: [0.75,  0.1,    0],
+			R2: [   0,    0,    0],
+			S2: [   0,    0,    0],
+			Z0: [   0,    0,    0]
 		});
 		
-		this.addArmor('ForcePlating', 100, 10, 0, {
-			A1: [ 50, 10, 0],
-			B1: [100,  0, 0],
-			C1: [  0,  0, 0],
-			E1: [125, 10, 0],
-			E2: [ 50, 10, 0],
-			E3: [ 75, 10, 0],
-			E5: [150, 10, 0],
-			S1: [ 10, 10, 0],
-			F1: [100, 30, 0],
-			G1: [150, 10, 0],
-			G2: [ 80, 10, 3],
-			M3: [250, 10, 0],
-			K1: [ 90,  5, 2],
-			K2: [ 75, 10, 0],
-			R2: [  0,  0, 0],
-			S2: [  0,  0, 0],
-			Z0: [  0,  0, 0]
+		this.addArmor('ForcePlating', 1, 0.1, 0, {
+			A1: [ 0.5,  0.1,    0],
+			B1: [   1,    0,    0],
+			C1: [   0,    0,    0],
+			E1: [1.25,  0.1,    0],
+			E2: [ 0.5,  0.1,    0],
+			E3: [0.75,  0.1,    0],
+			E5: [ 1.5,  0.1,    0],
+			S1: [ 0.1,  0.1,    0],
+			F1: [   1,  0.3,    0],
+			G1: [ 1.5,  0.1,    0],
+			G2: [ 0.8,  0.1, 0.03],
+			M3: [ 2.5,  0.1,    0],
+			K1: [ 0.9, 0.05, 0.02],
+			K2: [0.75,  0.1,    0],
+			R2: [   0,    0,    0],
+			S2: [   0,    0,    0],
+			Z0: [   0,    0,    0]
 		});
 		
-		this.addArmor('TankPlatingWet', 100, 10, 0, {
-			A1: [ 50, 10,  0],
-			B1: [100,  0,  0],
-			C1: [  0,  0,  0],
-			E1: [200, 10,  0],
-			E2: [ 50, 10,  0],
-			E3: [ 75, 10,  0],
-			E5: [150, 10,  0],
-			S1: [ 10, 10,  0],
-			F1: [100, 30,  0],
-			G1: [150, 10,  0],
-			G2: [ 80, 10,  3],
-			M3: [250, 10,  0],
-			K1: [ 90,  5,  2],
-			K2: [ 75, 10,  0],
-			R2: [  0,  0,  0],
-			S2: [  0,  0,  0],
-			Z0: [ 80,  0, 10]
+		this.addArmor('TankPlatingWet', 1, 0.1, 0, {
+			A1: [ 0.5,  0.1,    0],
+			B1: [   1,    0,    0],
+			C1: [   0,    0,    0],
+			E1: [   2,  0.1,    0],
+			E2: [ 0.5,  0.1,    0],
+			E3: [0.75,  0.1,    0],
+			E5: [ 1.5,  0.1,    0],
+			S1: [ 0.1,  0.1,    0],
+			F1: [   1,  0.3,    0],
+			G1: [ 1.5,  0.1,    0],
+			G2: [ 0.8,  0.1, 0.03],
+			M3: [ 2.5,  0.1,    0],
+			K1: [ 0.9, 0.05, 0.02],
+			K2: [0.75,  0.1,    0],
+			R2: [   0,    0,    0],
+			S2: [   0,    0,    0],
+			Z0: [ 0.8,    0,  0.1]
 		});
 		
-		this.addArmor('BuildingArmour', 50, 10, 0, {
-			C1: [ 0,  0, 0],
-			R2: [ 0,  0, 0],
-			S2: [ 0,  0, 0],
-			S1: [10, 10, 0],
-			A1: [25, 10, 0],
-			B1: [50,  0, 0],
-			B2: [65,  0, 0],
-			E1: [70, 10, 0],
-			E3: [40, 10, 0],
-			E4: [40, 10, 0],
-			E5: [40, 10, 0],
-			F1: [50, 30, 0],
-			G2: [40, 10, 3],
-			K1: [45,  5, 2],
-			Z0: [ 0,  0, 0]
+		this.addArmor('BuildingArmour', 0.5, 0.1, 0, {
+			C1: [   0,    0,    0],
+			R2: [   0,    0,    0],
+			S2: [   0,    0,    0],
+			S1: [ 0.1,  0.1,    0],
+			A1: [0.25,  0.1,    0],
+			B1: [ 0.5,    0,    0],
+			B2: [0.65,    0,    0],
+			E1: [ 0.7,  0.1,    0],
+			E3: [ 0.4,  0.1,    0],
+			E4: [ 0.4,  0.1,    0],
+			E5: [ 0.4,  0.1,    0],
+			F1: [ 0.5,  0.3,    0],
+			G2: [ 0.4,  0.1, 0.03],
+			K1: [0.45, 0.05, 0.02],
+			Z0: [   0,    0,    0]
 		});
 		
 		this.addArmor('SuperArmour', 0, 0, 0, {
-			R2: [100, 0, 0]
+			R2: [1, 0, 0]
 		});
 		
 		this.addArmor('SuperArmour2', 0, 0, 0, {});
@@ -199,5 +199,20 @@ function DamageTable()
 					critical_hit: default_critical_hit
 				};
 		}
+	}
+	
+	this.calcDamage = function(armor_type, weapon_type, strength)
+	{
+		var type = this._table[armor_type][weapon_type], proc;
+		
+		proc = type.vulnerability + (type.variation * 2 * Math.random() - type.variation);
+		if (proc < 0)
+			return 0;
+		
+		strength *= proc;
+		if (Math.random() < type.critical_hit)
+			strength *= 3;
+		 
+		 return strength;
 	}
 }
